[tool.poetry]
name = "leanf-backend"
version = "0.1.0"
description = "Leanf的 的 python 后端"
authors = ["EricTian <erictianc@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi-websocket-rpc = "^0.1.27"
lean-dojo = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
